--- a/pairing.html
+++ b/pairing.html
@@ -4,7 +4,7 @@
     <head>
 
         <meta charset="utf-8" />
-        <title>Secret Santa Pairing</title>
+        <title>Santa Invisible - parejas</title>
 
         <script src="vendors/Lodash-3.10.1.js"></script>
         <script src="vendors/Cryptojs.aes-3.1.2.js"></script>
@@ -147,7 +147,7 @@
             <div class="wrapper">
                 <div class="content">
 
-                    <div class="title">Hi <span id="name"></span>! You've been paired with</div>
+                    <div class="title">Hola <span id="name"></span>! Sos el Papá Noel invisible de: </div>
                     <script>document.getElementById('name').innerText = name</script>
 
                     <div class="pairing">
@@ -164,7 +164,7 @@
                         </script>
                     </div>
 
-                    <div class="title">Good luck!</div>
+                    <div class="title">Suerte con el regalo!</div>
 
                     <script>
                         if (queryString.extra) {
@@ -175,8 +175,6 @@
                 </div>
             </div>
 
-            <a href="http://arcanis.github.io/secretsanta/" class="spirit-of-christmas">
-                Want to start your own Secret Santa with your friends? Click here to get started!
             </a>
 
         </div>
