--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
 
         <meta charset="utf-8" />
-        <title>Santa invisible</title>
+        <title>Papá Noel invisible</title>
 
         <script src="vendors/Lodash-3.10.1.js"></script>
         <script src="vendors/Cryptojs.aes-3.1.2.js"></script>
@@ -155,8 +155,8 @@
             <div class="part" style="overflow-y: auto">
                 <div class="instructions">
                     <h1><img src="assets/mistletoe.png" style="vertical-align: middle" /> Secret Santa Generator</h1>
-                    <p>No signup, no email, no bs. <a href="https://github.com/arcanis/secretsanta">open-source</a> tool to help you generate your secret santa pairings. One static page, and that's it.</p>
-                    <p>Add names, share links.</p>
+                    <p>Sin registro, sin email. <a href="https://github.com/arcanis/secretsanta">open-source</a> tool to help you generate your secret santa pairings. One static page, and that's it.</p>
+                    <p>Agregar nombres, uno por linea, y compartir el enlace. Listo!</p>
                 </div>
             </div>
 
