--- a/index.html
+++ b/index.html
@@ -154,15 +154,15 @@
 
             <div class="part" style="overflow-y: auto">
                 <div class="instructions">
-                    <h1><img src="assets/mistletoe.png" style="vertical-align: middle" /> Secret Santa Generator</h1>
-                    <p>Sin registro, sin email. <a href="https://github.com/arcanis/secretsanta">open-source</a> tool to help you generate your secret santa pairings. One static page, and that's it.</p>
+                    <h1><img src="assets/mistletoe.png" style="vertical-align: middle" /> Papá Noel invisible</h1>
+                    <p>Sin registro, sin email. Basado en <a href="https://github.com/arcanis/secretsanta">Secret Santa</a>.</p>
                     <p>Agregar nombres, uno por linea, y compartir el enlace. Listo!</p>
                 </div>
             </div>
 
             <form id="form" class="part">
                 <textarea id="input" class="input" autofocus></textarea>
-                <button type="submit" class="generate">Generar parejas</button>
+                <button type="submit" class="generate">Generar Noeles!</button>
                 <div id="result" class="result none"></div>
             </form>
 
