--- a/index.html
+++ b/index.html
@@ -157,7 +157,11 @@
                     <h1><img src="assets/mistletoe.png" style="vertical-align: middle" /> Papá Noel invisible</h1>
                     <p>Sin registro, sin email. Basado en <a href="https://github.com/arcanis/secretsanta">Secret Santa</a>.</p>
                     <p>Agregar nombres, uno por linea, y compartir el enlace. Listo!</p>
+                    <p></p>
+                    <p>No hagas trampa y no abras el enlace si de los demas :)</p>
+
                 </div>
+                
             </div>
 
             <form id="form" class="part">
