--- a/pairing.html
+++ b/pairing.html
@@ -147,7 +147,7 @@
             <div class="wrapper">
                 <div class="content">
 
-                    <div class="title">Hola <span id="name"></span>! Sos el Papá Noel invisible de: </div>
+                    <div class="title">Hola <span id="name"></span>! Sos el Papá (o Mamá) Noel invisible de: </div>
                     <script>document.getElementById('name').innerText = name</script>
 
                     <div class="pairing">
