--- a/pairing.html
+++ b/pairing.html
@@ -4,7 +4,7 @@
     <head>
 
         <meta charset="utf-8" />
-        <title>Santa Invisible - parejas</title>
+        <title>Papá y Mamá Noel Invisibles</title>
 
         <script src="vendors/Lodash-3.10.1.js"></script>
         <script src="vendors/Cryptojs.aes-3.1.2.js"></script>
@@ -164,7 +164,7 @@
                         </script>
                     </div>
 
-                    <div class="title">Suerte con el regalo!</div>
+                    <div class="title">Jo jo jo!</div>
 
                     <script>
                         if (queryString.extra) {
