--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
             <div class="part" style="overflow-y: auto">
                 <div class="instructions">
                     <h1><img src="assets/mistletoe.png" style="vertical-align: middle" /> Papá Noel invisible</h1>
-                    <p>Sin registro, sin email. Basado en <a href="https://github.com/arcanis/secretsanta">Secret Santa</a>.</p>
+                    <p>Sin registro, sin email.</p>
                     <p>Agregar nombres, uno por linea, y compartir el enlace. Listo!</p>
-                    <p></p>
+                    <p> Basado en Secret Santa, de Mael Nison.</p>
                     <p>No hagas trampa y no abras el enlace si de los demas :)</p>
 
                 </div>
@@ -173,23 +173,13 @@
         </div>
 
         <script id="input-placeholder" type="text/placeholder">
-            # You can add a user by adding a line
+            # Agregar un usuario por linea
             Santa
 
-            # You can add some details if you want to, using parentheses after the name
-            Nicholas (the elf)
+            # agregar regalo entre parentesis
+            Nicholas (un reno)
 
-            # You can prevent someone from being paired with someone else
-            Maël !Aurélie
-            Aurélie !Maël
-
-            # You can also exclude someone from being paired with multiple people
-            # Careful: too many exclusion rules can make your secret santa less interesting!
-            Rudolph !Santa !Nicholas (the elf)
-
-            # You can also cheat a bit and force someone to be paired with another
-            Nicholas (the saint) =Nicholas (the elf)
-
+          
             ...
         </script>
 
